additional test case plus readme.md